# codex-session-patcher

./: README.md  README_EN.md  pyproject.toml
codex_session_patcher/: cli.py
codex_session_patcher/core/: formats.py  parser.py  patcher.py
codex_session_patcher/ctf_config/: __init__.py  installer.py  status.py
scripts/: build-binary.bat  build-binary.sh
tests/: test_openclaw.py  test_opencode.py
web/backend/: ai_service.py  api.py  schemas.py
web/frontend/src/components/: PromptEnhancePanel.vue  SessionList.vue  SettingsPanel.vue
web/frontend/src/locales/: en-US.js  zh-CN.js
web/frontend/src/stores/: ctfStore.js  sessionStore.js  settingsStore.js
